Fix references to main .js file in package.json & bower.json (again)

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git://github.com/icilalune/angular-snipcart"
   },
-  "main": "./src/angular-snipcart.js",
+  "main": "./src/snipcart.js",
   "devDependencies": {
     "angular": "~1.2.26"
   },
