Issue #2: Add keywords to package.json & bower.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "type": "git",
     "url": "http://github.com/icilalune/angular-snipcart"
   },
+  "keywords":[
+    "angular",
+    "snipcart"
+  ],
   "engines": {
     "node": "*"
   },
